--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/negotiator": "^0.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "feed": "^4.2.2",
     "lucide-react": "^0.307.0",
     "negotiator": "^0.6.3",
     "next": "^14.1.0",
