--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/negotiator": "^0.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
     "embla-carousel-react": "^8.0.0",
     "feed": "^4.2.2",
     "lucide-react": "^0.307.0",
