--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "resend": "^3.2.0",
